Updating camel versions.